# autototp-server

./: LICENSE.md  README.md  pyproject.toml
autototp/: __init__.py  __main__.py
autototp/lib/: api.py  app.py  config.py  db.py  util.py
